Resolved Merge Conflicts